@@ -218,7 +218,7 @@
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x97 UNUSED
 	USECODE_INTRINSIC_PTR(close_gumps),	// Guess	// 0x98
 	USECODE_INTRINSIC_PTR(item_say),			// 0x99
-	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x9a
+	USECODE_INTRINSIC_PTR(close_gump),			// 0x9a
 	USECODE_INTRINSIC_PTR(in_gump_mode),	// Guess	// 0x9b
 
 	// Packing!!!
