@@ -298,6 +298,7 @@ class Usecode_internal : public Usecode_machine
 	USECODE_INTRINSIC_DECL(call_guards);
 	USECODE_INTRINSIC_DECL(attack_avatar);
 	USECODE_INTRINSIC_DECL(path_run_usecode);
+	USECODE_INTRINSIC_DECL(close_gump);
 	USECODE_INTRINSIC_DECL(close_gumps);
 	USECODE_INTRINSIC_DECL(in_gump_mode);
 	USECODE_INTRINSIC_DECL(is_not_blocked);
